fix: marker popup -> image brightness contrast with white text

--- a/Event_Tracker_App/Event.Tracker.Web/src/pages/Explore.css
+++ b/Event_Tracker_App/Event.Tracker.Web/src/pages/Explore.css
@@ -106,6 +106,7 @@
             left: 0;
             width: 100% !important;
             height: 100% !important;
+            filter: brightness(80%);
             object-fit: cover;
             z-index: -1;
         }
